[package]
name = "polkadot-rpc"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = { version = "0.3.21", features = [ "compat" ] }
clap = { version = "4.2.5", features = ["derive"] }

jsonrpsee = { version = "0.16.2", features = ["server"] }
polkadot-primitives = { path = "../primitives" }
sc-client-api = { path = "../../substrate/client/api" }
sp-blockchain = { path = "../../substrate/primitives/blockchain" }
sp-keystore = { path = "../../substrate/primitives/keystore" }
sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-api = { path = "../../substrate/primitives/api" }
#sp-consensus = { path = "../../substrate/primitives/consensus/common" }
sp-consensus-babe = { path = "../../substrate/primitives/consensus/babe" }
sc-consensus-manual-seal = { path = "../../substrate/client/consensus/manual-seal" }
sp-consensus-aura = { path = "../../substrate/primitives/consensus/aura" }
sc-chain-spec = { path = "../../substrate/client/chain-spec" }
sc-rpc = { path = "../../substrate/client/rpc" }
sc-consensus-babe = { path = "../../substrate/client/consensus/babe" }
sc-consensus-babe-rpc = { path = "../../substrate/client/consensus/babe/rpc" }
sc-consensus-beefy = { path = "../../substrate/client/consensus/beefy" }
sc-consensus-beefy-rpc = { path = "../../substrate/client/consensus/beefy/rpc" }
sc-consensus-epochs = { path = "../../substrate/client/consensus/epochs" }
sc-consensus-grandpa = { path = "../../substrate/client/consensus/grandpa" }
sc-consensus-grandpa-rpc = { path = "../../substrate/client/consensus/grandpa/rpc" }
sc-sync-state-rpc = { path = "../../substrate/client/sync-state-rpc" }
#txpool-api = { package = "sc-transaction-pool-api", path = "../../substrate/client/transaction-pool/api" }
frame-rpc-system = { package = "substrate-frame-rpc-system", path = "../../substrate/utils/frame/rpc/system" }
mmr-rpc = { path = "../../substrate/client/merkle-mountain-range/rpc" }
pallet-transaction-payment-rpc = { path = "../../substrate/frame/transaction-payment/rpc" }
sp-block-builder = { path = "../../substrate/primitives/block-builder" }
substrate-state-trie-migration-rpc = { path = "../../substrate/utils/frame/rpc/state-trie-migration-rpc" }
polkadot-runtime = { path = "../runtime/polkadot"}
sp-inherents = { path = "../../substrate/primitives/inherents" }

consensus_common = { package = "sp-consensus", path = "../../substrate/primitives/consensus/common" }
sc-transaction-pool-api = { path = "../../substrate/client/transaction-pool/api" }
sc-network-sync = { path = "../../substrate/client/network/sync" }
sc-network = { path = "../../substrate/client/network" }
sc-transaction-pool = { path = "../../substrate/client/transaction-pool" }

# Frontier
fc-cli = { path = "../evm-client/cli" }
fc-consensus = { path = "../evm-client/consensus" }
fc-db = { path = "../evm-client/db" }
fc-mapping-sync = { path = "../evm-client/mapping-sync" }
fc-rpc = { path = "../evm-client/rpc" }
fc-rpc-core = { path = "../evm-client/rpc-core" }
fp-consensus = { path = "../evm-primitives/consensus" }
fp-dynamic-fee = { path = "../evm-primitives/dynamic-fee" }
fp-evm = { path = "../evm-primitives/evm" }
fp-rpc = { path = "../evm-primitives/rpc" }
fp-storage = { path = "../evm-primitives/storage" }
fc-storage = {path = "../evm-client/storage" }

fc-api = { path = "../evm-client/api" }
