[package]
name = "fc-storage"
version = "1.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Ethereum storage compatibility layer for Substrate."


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { version = "0.14.0", features = ["with-codec"] }
ethereum-types = { version = "0.14.1"}
scale-codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }


# Substrate
sc-client-api = { path = "../../../substrate/client/api" }
sp-api = { path = "../../../substrate/primitives/api" }
sp-blockchain = { path = "../../../substrate/primitives/blockchain" }
sp-io = { path = "../../../substrate/primitives/io" }
sp-runtime = { path = "../../../substrate/primitives/runtime" }

sp-storage = {path = "../../../substrate/primitives/storage" }
# Frontier
fp-rpc = { version = "3.0.0-dev", path = "../../evm-primitives/rpc" }
fp-storage = { version = "2.0.0", path = "../../evm-primitives/storage" }