[package]
name = "fc-storage"
version = "1.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Ethereum storage compatibility layer for Substrate."
edition = "2021"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { version = "0.14.0", features = ["with-codec"] , default-features = false}
ethereum-types = { version = "0.14.1", default-features = false}
scale-codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }


# Substrate
sc-client-api = { path = "../../../substrate/client/api", default-features = false }
sp-api = { path = "../../../substrate/primitives/api", default-features = false }
sp-blockchain = { path = "../../../substrate/primitives/blockchain", default-features = false }
sp-io = { path = "../../../substrate/primitives/io" , default-features = false}
sp-runtime = { path = "../../../substrate/primitives/runtime", default-features = false }

sp-storage = {path = "../../../substrate/primitives/storage", default-features = false }
# Frontier
fp-rpc = { version = "3.0.0-dev", path = "../../evm-primitives/rpc" , features = ["default"]}
fp-storage = { version = "2.0.0", path = "../../evm-primitives/storage" , features = ["default"]}