[package]
name = "pallet-base-fee"
version = "1.0.0"
license = "Apache-2.0"
description = "EIP-1559 fee utils."
edition = "2021"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }


scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }

# Substrate

frame-support = {  path = "../../../substrate/frame/support", default-features = false }

frame-system = {  path = "../../../substrate/frame/system", default-features = false }
sp-core = {  path = "../../../substrate/primitives/core", default-features = false }
sp-runtime = {  path = "../../../substrate/primitives/runtime", default-features = false }

# Frontier
fp-evm = { version = "3.0.0-dev", path = "../../evm-primitives/evm", default-features = false }

[dev-dependencies]
# Substrate

#sp-io = {  path = "../../../substrate/primitives/io", default-features = false }

sp-io = {  path = "../../../substrate/primitives/io", default-features = false , features = ["default"] }

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	# Frontier
	"fp-evm/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
