[package]
name = "pallet-evm"
version = "6.0.0-dev"
license = "Apache-2.0"
readme = "README.md"
description = "FRAME EVM contracts pallet."


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
environmental = { version = "1.1.4", default-features = false,optional = true}
evm = { git = "https://github.com/rust-blockchain/evm", rev = "b7b82c7e1fc57b7449d6dfa6826600de37cc1e65", default-features = false,features = ["with-codec"] }
hash-db = { version = "0.16.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"],optional = true}
hex-literal = "0.4.1"
impl-trait-for-tuples = "0.2.1"
log = { version = "0.4.20", default-features = false }
rlp = { version = "0.5.2", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }


scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }

# Substrate
frame-benchmarking = { path = "../../../substrate/frame/benchmarking", default-features = false }

frame-support = { path = "../../../substrate/frame/support", default-features = false }

frame-system = { path = "../../../substrate/frame/system", default-features = false }
sp-core = { path = "../../../substrate/primitives/core", default-features = false }
sp-io = {  path = "../../../substrate/primitives/io", default-features = false }
sp-runtime = {  path = "../../../substrate/primitives/runtime", default-features = false }
pallet-timestamp = { path = "../../../substrate/frame/timestamp", default-features = false ,features = ["default"]}

sp-std = { path = "../../../substrate/primitives/std", default-features = false }
# Frontier
fp-account = { version="1.0.0-dev",path="../../evm-primitives/account" ,default-features =false }
fp-evm = { version = "3.0.0-dev", path = "../../evm-primitives/evm", default-features = false }

[dev-dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
# Substrate
pallet-balances = { path = "../../../substrate/frame/balances", default-features = false,features = ["default", "insecure_zero_ed"] }
pallet-evm-precompile-simple = { version = "2.0.0-dev", path = "../evm/precompile/simple", default-features = false }

[features]
default = ["std"]
std = [
	"environmental?/std",
	"evm/std",
	"evm/with-serde",
	"hex?/std",
	"log/std",
	"rlp/std",
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	# Frontier
	"fp-account/std",
	"fp-evm/std",
]
runtime-benchmarks = [
	
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-timestamp/try-runtime",

]
forbid-evm-reentrancy = ["dep:environmental"]
