[package]
name = "fp-dynamic-fee"
version = "1.0.0"
license = "Apache-2.0"
description = "Dynamic fee inherent primitives for Ethereum RPC (web3) compatibility layer for Substrate."


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { async-trait = "0.1", optional = true }
# Substrate
sp-core = {  path = "../../../substrate/primitives/core", default-features = false }
sp-inherents = { path = "../../../substrate/primitives/inherents", default-features = false }

[features]
default = ["std"]
std = [
	"async-trait",
	# Substrate
	"sp-core/std",
	"sp-inherents/std",
]
